--- a/.env.default
+++ b/.env.default
@@ -4,3 +4,8 @@ BOT_TOKEN_MAIN=
 BOT_TOKEN_DEV=
 # Log channel ID
 LOG_CHANNEL_ID=1389436200267288586
+# OpenRouter API key (required for AI chat)
+OPENROUTER_API_KEY=
+# Optional metadata for OpenRouter rate limiting
+OPENROUTER_SITE_URL=
+OPENROUTER_APP_NAME=Chuds Discord Bot
