--- a/.env.default
+++ b/.env.default
@@ -4,6 +4,8 @@ BOT_TOKEN_MAIN=
 BOT_TOKEN_DEV=
 # Log channel ID
 LOG_CHANNEL_ID=1389436200267288586
+# Optional: Role ID blocked from using music commands (leave blank to allow everyone)
+MUSIC_DJ_ROLE_ID=
 # OpenRouter API key (required for AI chat)
 OPENROUTER_API_KEY=
 # Optional metadata for OpenRouter rate limiting
