--- a/.env.default
+++ b/.env.default
@@ -6,6 +6,12 @@ BOT_TOKEN_DEV=
 LOG_CHANNEL_ID=1389436200267288586
 # Optional: Role ID blocked from using music commands (leave blank to allow everyone)
 MUSIC_DJ_ROLE_ID=
+# Lavalink connection (remote server)
+LAVALINK_HOST=
+LAVALINK_PORT=
+LAVALINK_PASSWORD=
+LAVALINK_REGION=global
+LAVALINK_SSL=false
 # OpenRouter API key (required for AI chat)
 OPENROUTER_API_KEY=
 # Optional metadata for OpenRouter rate limiting
